body display to inline-block, working on mobile width fix.

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ You should have received a copy of the GNU General Public License along with reg
 body {
   background:#FFF;
   margin:0;
+  display:inline-block;
 }
 
 #vertretungsplan {
